# LoRaMac-node

./: .gitignore  run.sh
cmake/: asr6601.cmake
src/: CMakeLists.txt
src/apps/LoRaMac/periodic-uplink-lpp/ASR6601/: main.c
src/apps/RTC/: main.c
src/apps/i2c/: CMakeLists.txt  main.c
src/apps/ping-pong/: CMakeLists.txt
src/apps/ping-pong/ASR6601/: main.c
src/apps/system-test/: CMakeLists.txt  main.c
src/apps/timer/: CMakeLists.txt  main.c
src/apps/uart/: CMakeLists.txt  Makefile  main.c
src/apps/uart/ASR6601/: main.c
src/apps/uart/inc/: board.h  delay.h  tremo_it.h
src/apps/uart/src/: board.c  delay.c  main.c
src/boards/ASR6601/: CMakeLists.txt  board-config.h  board-periph.h  board.c  delay-board.c  eeprom-board.c  gpio-board.c  i2c-board.c  lpm-board.c  rtc-board.c  spi-board.c  sx1262-board.c  sx126x-board.c  uart-board.c
src/boards/ASR6601/cfg/: tremo_it.c  tremo_it.h
src/boards/mcu/asr6601/drivers/peripheral/inc/: tremo_gpio.h  tremo_pwr.h  tremo_rtc.h
src/boards/mcu/asr6601/drivers/peripheral/src/: tremo_rtc.c
src/boards/mcu/asr6601/platform/system/: printf-stdarg.c
src/mac/: CMakeLists.txt
src/peripherals/soft-se/: se-identity.h  soft-se.c
src/radio/sx126x/: radio.c  sx126x.c
src/system/: timer.c
